# opencv_tests

./: .~lock.python_resultsFib.csv#  OpenCVTests.files  OpenCVTests.includes  READ.me  python_results.csv  python_resultsFace.csv  python_resultsFace2.csv  python_resultsFace3.csv  python_resultsFib.csv  python_resultsHough.csv  python_resultsHough2.csv  python_resultsPNG-b.csv  python_resultsPNG-w.csv  python_resultsPNG-wBACKUP.csv  python_resultsTbb.csv  python_resultsTest.csv  v30.txt  v31.txt  v32.txt
newTest/: .hello-tp.h.swp  300.txt  400.txt  400png.txt  500.txt  600.txt  700.txt  700png.txt  700x.txt  800png.csv  800png.txt  CMakeCache.txt  CMakeLists.txt  Makefile  MakefileOpen  OpenCvProject  READ.me  bash.sh  bashKernel.sh  bashTest.sh  clean.sh  cmake_install.cmake  fib  fib_trace  fib_trace.cpp  fibonacci.cpp  fullhd.txt  main.py  obama.txt  open_track  opencv  opening_opencv  output.txt  program_to_load_program  program_to_load_program2  program_to_load_program3  python_reader.py  work_load_display.cpp
newTest/abder/: Makefile  build-franki3.sh  display.cpp
newTest/demo/: Makefile  READ.me  open  open.c
newTest/python_scripts/: Classifier.py  analysis_mod.py  cla.py  classifier.py  csv_module.py  gui.py  k-means.py  (+9 more)
tests/: .opencv-test.cpp.swp  CMakeCache.txt  CMakeLists.txt  FranciscoProject  FranciscoProject_3-1  Makefile  OpenCvProject  OpenCvProject_3-2  batch.sh  build-franki.sh  build-franki2.sh  build-franki3.sh  cmake_install.cmake  gmon.out  opencv-test.cpp  out.txt  out_3-1.txt  outputfile-31.txt  outputfile-32.txt  outputfile.txt  trace.josn
(+173 files in other folders)
